<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   		android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
   
    <ScrollView 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:fillViewport="true"
    	android:padding="10dp"
    	android:layout_above="@+id/layout_btnAdd" >
    	          
			<LinearLayout 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    tools:context=".parkCreate" 
			    android:orientation="vertical"
			    android:focusable="true" 
			    android:focusableInTouchMode="true">
		    
			    <LinearLayout
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:orientation="horizontal" >

			        <TextView
			            android:id="@+id/textView6"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center_horizontal"
			            android:layout_weight="1.65"
			            android:padding="10sp"
			            android:text="@string/add_park"
			            android:textAppearance="?android:attr/textAppearanceLarge" />

			    </LinearLayout>
		          
			    <TextView
			        android:id="@+id/add_lblPlaca"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_margin="10sp"
			        android:text="@string/placa_label" />
		
		    <EditText
		        android:id="@+id/add_etTitulo"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10sp"
		        android:inputType="text"
		        android:ems="10"
		        android:maxLength="50" />
		
		    <TextView
		        android:id="@+id/add_lblEntrada"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="10sp"
		        android:text="@string/entrada_label" />
		
		    <EditText
		        android:id="@+id/add_etEntrada"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10sp"
		        android:inputType="text"
		        android:ems="10"
		        android:maxLength="500" />
		
		    <TextView
		        android:id="@+id/add_lblSaida"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="10sp"
		        android:text="@string/saida_label" />
		
		    <EditText
		        android:id="@+id/add_etSaida"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:layout_margin="10sp"
		        android:ems="10" 
		        android:maxLength="50" />


		</LinearLayout>        
</ScrollView>

    <LinearLayout 
        android:id="@+id/layout_btnAdd"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_margin="10sp" 
        android:gravity="center_horizontal" >
			
		<Button 
		    android:id="@+id/add_btnAdd" 
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content" 
		    android:drawableLeft="@android:drawable/ic_menu_add" 
		    android:text="@string/add_park" 
		    android:textSize="12sp" />
	</LinearLayout>
</RelativeLayout>

